--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "flask-sqlalchemy>=3.1.1",
     "google-genai>=1.27.0",
     "google-generativeai>=0.8.5",
+    "gunicorn>=23.0.0",
     "mysqlclient>=2.2.7",
     "pdfplumber>=0.11.7",
     "pymysql>=1.1.1",
